kubernete_aws/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices-demo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-node
            port:
              number: 3001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-react
            port:
              number: 8765
